fix card spacing

--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,13 @@ a:hover {
 }
 
 
+/* Card layout ------------------------------------------------------------- */
+
+#stack {
+    padding-bottom: 40px;
+}
+
+
 /* Social link icons ------------------------------------------------------- */
 
 #about-text {
